# open-football-fields

./: .gitignore  ATTRIBUTION.md  CITATION.cff  DATA_AVAILABILITY.md  LICENCE  README.md  REPRODUCIBILITY.md  pyproject.toml  references.bib  references_verification.csv  results_verification.csv
config/: default.yaml
figures/: _sportec_rows_J03WMX.json  _sportec_rows_J03WN1.json  _sportec_rows_J03WOH.json  _sportec_rows_J03WOY.json  _sportec_rows_J03WPY.json  _sportec_rows_J03WQQ.json  _sportec_rows_J03WR9.json  analysis_ch5_mechanical_null.json  analysis_ch5_mechanical_null_provenance.json  analysis_control_constants.json  analysis_control_constants_provenance.json  analysis_coverage_impact.json  analysis_coverage_impact_provenance.json  analysis_dataset_inventory.json  analysis_dataset_inventory_provenance.json  analysis_descriptor_stats.json  analysis_descriptor_stats_provenance.json  analysis_directness_confounds.json  analysis_directness_confounds_provenance.json  analysis_directness_passonly.json  analysis_directness_passonly_provenance.json  analysis_face_validity.json  analysis_face_validity_provenance.json  analysis_fidelity_extended.json  analysis_fidelity_extended_provenance.json  analysis_fidelity_speedstat.json  analysis_fidelity_speedstat_provenance.json  analysis_fidelity_sportec.json  analysis_fidelity_sportec_provenance.json  analysis_gate_sensitivity.json  analysis_gate_sensitivity_provenance.json  analysis_mens_league.json  analysis_mens_league_provenance.json  analysis_mixed_models.json  analysis_mixed_models_provenance.json  analysis_obs_ceiling.json  (+37 more)
(+64 files in other folders)
